Updated documentation Minor bugfixes

--- a/KRunner-Spotify.config
+++ b/KRunner-Spotify.config
@@ -13,7 +13,7 @@ ADD_TO_QUEUE_COMMAND = Add
 CURRENT_TRACK_INFO_COMMAND = TrackInfo
 DECREASE_VOLUME_COMMAND = DecVol
 EDIT_CONFIG_COMMAND = EditConfig
-EPISODES_COMMAND = Episodes
+EPISODE_COMMAND = Episode
 INCREASE_VOLUME_COMMAND = IncVol
 LOGIN_COMMAND = Login
 LOGOUT_COMMAND = Logout
