Implented Repeat and Shuffle command.

--- a/KRunner-Spotify.config
+++ b/KRunner-Spotify.config
@@ -29,5 +29,7 @@ PODCAST_COMMAND = Podcast
 FOLLOWED_PODCAST_COMMAND = FollowedPodcast
 PREVIOUS_COMMAND = Previous
 RELOAD_CONFIG_COMMAND = ReloadConfig
+REPEAT_COMMAND = Repeat
 RESUME_COMMAND = Resume
+SHUFFLE_COMMAND = Shuffle
 START_SPOTIFY_COMMAND = Spotify
