Hotfix to fix incorrect command notice.

--- a/KRunner-Spotify.config
+++ b/KRunner-Spotify.config
@@ -1,7 +1,7 @@
 [Settings]
 MAX_RESULTS = 5
 SPOTIFY_URL = https://open.spotify.com              
-ACCES_SCOPE = user-modify-playback-state user-read-playback-state user-library-read user-library-modify user-read-playback-position
+ACCES_SCOPE = user-modify-playback-state user-read-playback-state user-library-read user-library-modify user-read-playback-position user-top-read
 CLIENT_ID = 4308514e1497441b9da05278342b8289
 REDIRECT_URI = http://localhost:8888/callback
 CACHE_PATH = ~/.cache/KRunnerSpotify/.cache
