Control volume by adding or removing +/-

--- a/KRunner-Spotify.config
+++ b/KRunner-Spotify.config
@@ -1,4 +1,5 @@
 [Settings]
+VOLUME_STEP = 10
 MAX_RESULTS = 5
 SPOTIFY_URL = https://open.spotify.com              
 ACCES_SCOPE = user-modify-playback-state user-read-playback-state user-library-read user-library-modify user-read-playback-position user-top-read
