Character to inc/dec can now be configured

--- a/KRunner-Spotify.config
+++ b/KRunner-Spotify.config
@@ -8,6 +8,8 @@ REDIRECT_URI = http://localhost:8888/callback
 CACHE_PATH = ~/.cache/KRunnerSpotify/.cache
 CASE_SENSITIVE = False
 CONFIG_EDITOR = /usr/bin/kate
+INCREASE_VOLUME_CHARACTER = +
+DECREASE_VOLUME_CHARACTER = -
 
 [CommandNames]
 ADD_TO_QUEUE_COMMAND = Add
