Implemented SetVolume command

--- a/KRunner-Spotify.config
+++ b/KRunner-Spotify.config
@@ -37,5 +37,6 @@ REPEAT_COMMAND = Repeat
 RESUME_COMMAND = Resume
 REWIND_COMMAND = Rewind
 SEEK_COMMAND = Seek
+SET_VOLUME_COMMAND = SetVol
 SHUFFLE_COMMAND = Shuffle
 START_SPOTIFY_COMMAND = Spotify
