Implemented Play Artist and TopArtist.

--- a/KRunner-Spotify.config
+++ b/KRunner-Spotify.config
@@ -24,12 +24,14 @@ LOGIN_COMMAND = Login
 LOGOUT_COMMAND = Logout
 NEXT_COMMAND = Next
 PAUSE_COMMAND = Pause
+PLAY_ARTIST_COMMAND = artist
 PLAY_COMMAND = Play
 PLAY_FEATURED_PLAYLIST_COMMAND = featured
 PLAY_MY_PLAYLIST_COMMAND = myplaylist
 PLAY_PLAYLIST_COMMAND = playlist
-PLAY_SONG_BY_ARTIST_COMMAND = artist
+PLAY_SONG_BY_ARTIST_COMMAND = byArtist
 PLAY_SONG_COMMAND = song
+PLAY_TOP_ARTIST_COMMAND = topArtist
 PODCAST_COMMAND = Podcast
 PREVIOUS_COMMAND = Previous
 RELOAD_CONFIG_COMMAND = ReloadConfig
